dist: dzil: Force @SHARYANTO version (inspired by chorny)

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ homepage  =http://metacpan.org/release/LWP-UserAgent-Patch-LogRequestContent
 repository=http://github.com/sharyanto/perl-LWP-UserAgent-Patch-LogRequestContent
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs]
 ;!lint-prereqs assume-used # target module
