dist: dzil: rename bundle SHARYANTO -> Author::SHARYANTO

--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ copyright_holder=Steven Haryanto
 homepage  =http://metacpan.org/release/LWP-UserAgent-Patch-LogRequestContent
 repository=http://github.com/sharyanto/perl-LWP-UserAgent-Patch-LogRequestContent
 
-[@SHARYANTO]
+[@Author::SHARYANTO]
 :version=0.09
 
 [Prereqs]
