[dzil] Update syntax of lint-prereqs directive (-> lint_prereqs) to be more IOD-compliant

--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,7 @@ name   =LWP-UserAgent-Patch-LogRequestContent
 :version=0.23
 
 [Prereqs]
-;!lint-prereqs assume-used # target module
+;!lint_prereqs assume-used # target module
 LWP::UserAgent=6.05
 
 perl=5.010001
