--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,9 @@
-version=0.02
+version=0.03
 
 name   =LWP-UserAgent-Patch-LogRequestContent
 
-[MetaResources]
-
-
-
 [@Author::PERLANCAR]
-:version=0.23
+:version=0.53
 
 [Prereqs]
 perl=5.010001
@@ -15,7 +11,6 @@ base=0
 strict=0
 warnings=0
 Log::Any::IfLOG=0.07
-;!lint_prereqs assume-used # target module
+;!lint_prereqs assume-used "target module"
 LWP::UserAgent=6.05
 Module::Patch=0.16
-
